public/assets/css/kdgiving-style.css
/* ... */
.about-one__shape-1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-repeat: no-repeat;
  background-position: center;
  mix-blend-mode: luminosity;
  opacity: 0.15;
}

.about-one__left {
  position: relative;
  display: block;
  margin-right: 100px;
}

.about-one__img-box {
  position: relative;
  display: block;
}

.about-one__img {
  position: relative;
  display: block;
}

.about-one__img img {
  width: 100%;
  border-top-right-radius: 100px;
  border-bottom-left-radius: 335px;
  border-bottom-right-radius: 335px;
}

.about-one__img-border {
  position: absolute;
  top: -30px;
  left: -30px;
  height: 600px;
  width: 430px;
  border: 6px solid var(--oxpins-primary);
  border-bottom-left-radius: 300px;
  border-bottom-right-radius: 300px;
}

.about-one__curved-circle-box {
  position: absolute;
  bottom: 0;
  right: 0;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  background-color: rgb(241, 241, 241);
  box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.1), inset 0px 0px 16px 0px rgba(0, 0, 0, 0.13);
}

.about-one__curved-circle-box .curved-circle {
  position: absolute;
  top: 18px;
  right: 18px;
  bottom: 18px;
  left: 18px;
  font-size: 16px;
  font-weight: 500;
  color: var(--oxpins-black);
  text-transform: uppercase;
  display: flex;
  justify-content: center;
  align-items: center;
  letter-spacing: 0.005em;
}

.about-one__curved-circle-icon {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.about-one__curved-circle-icon img {
  width: auto;
}

.about-one__shape-2 {
  position: absolute;
  top: 280px;
  left: -120px;
}

.about-one__shape-2 img {
  width: auto;
}

.about-one__shape-3 {
  position: absolute;
  bottom: 125px;
  left: -55px;
}

.about-one__shape-3 img {
  width: auto;
}

.about-one__shape-4 {
  position: absolute;
  bottom: 265px;
  right: -70px;
}

.about-one__shape-4 img {
  width: auto;
}

.about-one__right {
  position: relative;
  display: block;
}

.about-one__right .section-title {
  margin-bottom: 12px;
}

.about-one__fund {
  position: relative;
  display: block;
  padding-left: 25px;
  margin-top: 34px;
  margin-bottom: 43px;
}

.about-one__fund:before {
  content: "";
  position: absolute;
  top: 8px;
  bottom: 7px;
  left: 0;
  width: 6px;
  background-color: var(--oxpins-base);
}

.about-one__fund-text {
  font-size: 18px;
  font-weight: 500;
  color: var(--oxpins-black);
  line-height: 34px;
}

.about-one__fund-text span {
  color: var(--oxpins-primary);
  font-weight: 800;
}

.about-one__points {
  position: relative;
  display: flex;
  align-items: center;
  margin-bottom: 41px;
}

.about-one__points li {
  position: relative;
  display: flex;
}

.about-one__points li + li {
  margin-left: 19px;
}

.about-one__points li .icon {
  position: relative;
  display: inline-block;
  z-index: 1;
}

.about-one__points li .icon:before {
  content: "";
  position: absolute;
  top: -10px;
  left: -10px;
  height: 43px;
  width: 43px;
  background-color: var(--oxpins-extra);
  border-radius: 50%;
  transition: all 500ms linear;
  transition-delay: 0.1s;
  transform: scale(1);
  z-index: -1;
}

.about-one__points li:hover .icon:before {
  transform: scale(1.2);
}

.about-one__points li .icon span {
  position: relative;
  display: inline-block;
  font-size: 65px;
  color: var(--oxpins-base);
  transition: all 500ms linear;
  transition-delay: 0.1s;
  transform: scale(1);
}

.about-one__points li:hover .icon span {
  transform: scale(0.9);
}

.about-one__points li .text {
  margin-left: 20px;
  margin-top: -5px;
}

.about-one__points li .text h5 {
  font-size: 20px;
  line-height: 30px;
  font-weight: 900;
  margin-bottom: 7px;
}

.about-one__points li .text h5 a {
  color: var(--oxpins-black);
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}

.about-one__points li:hover .text h5 a {
  color: var(--oxpins-base);
}

.about-one__points li .text p {
  font-size: 16px;
}

/*--------------------------------------------------------------
# Causes One
--------------------------------------------------------------*/
.causes-one {
  position: relative;
  display: block;
  padding: 0 0 90px;
}

.causes-one__single {
  position: relative;
  display: block;
  margin-bottom: 30px;
}

.causes-one__img {
  position: relative;
  display: block;
  border-top-left-radius: var(--oxpins-bdr-radius);
  border-top-right-radius: var(--oxpins-bdr-radius);
  overflow: hidden;
  z-index: 1;
}

.causes-one__img:before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: "";
  background-color: rgba(var(--oxpins-black-rgb), 0.3);
  opacity: 1;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  -webkit-transform: perspective(400px) rotateX(-90deg) scale(0.2);
  -ms-transform: perspective(400px) rotateX(-90deg) scale(0.2);
  transform: perspective(400px) rotateX(-90deg) scale(0.2);
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
  border-top-left-radius: var(--oxpins-bdr-radius);
  border-top-right-radius: var(--oxpins-bdr-radius);
  z-index: 1;
}

.causes-one__single:hover .causes-one__img:before {
  opacity: 1;
  -webkit-transform: perspective(400px) rotateX(0deg) scale(1);
  -ms-transform: perspective(400px) rotateX(0deg) scale(1);
  transform: perspective(400px) rotateX(0deg) scale(1);
}

.causes-one__img img {
  width: 100%;
  border-top-left-radius: var(--oxpins-bdr-radius);
  border-top-right-radius: var(--oxpins-bdr-radius);
  transition-delay: 0.1s;
  transition-timing-function: ease-in-out;
  transition-duration: 0.7s;
  transition-property: all;
}

.causes-one__single:hover .causes-one__img img {
  transform: scale(1.1) rotate(2deg);
}

.causes-one__cat {
  position: absolute;
  bottom: 30px;
  left: 30px;
  background-color: var(--oxpins-primary);
  padding: 6px 25px;
  border-radius: 15px;
  z-index: 2;
}
/* ... */

